--- a/EduardoAntonioVaquezLopez/Views/Cajero/SecundarioMenu.cshtml
+++ b/EduardoAntonioVaquezLopez/Views/Cajero/SecundarioMenu.cshtml
@@ -5,4 +5,10 @@
 }
 
 <h2>Ingrese Monto a Solicitar</h2>
+<label>Ingrese Monto a solicitar</label>
+
+<input type="number" name="monto" required placeholder="Escribe tu Monto" value="" />
+<br />
+<input type="submit">
+<br>
 
